# bayes_Net_Sample

./: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
Sample/: Bayes_Nets_Assignment.ipynb
bayes/: example_bayesnet.txt  sample_input_txt.py
src/bayes_net/: bayesNets.py
tests/: test_help.py  test_sample.py
