[metadata]
description-file=README.md
license_files=LICENSE
name = bayes_nets_sample
version = 0.8
author = Srajan Chourasia
author_email = srajanstark.ash@gmail.com
description = A class to represent a Bayes Network. And apply all the different sampling strategies to the calculate a given query.
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/srajan-kiyotaka/bayesNetSample
project_urls =
    Bug Tracker = https://github.com/srajan-kiyotaka/bayesNetSample/issues
    repository = https://github.com/srajan-kiyotaka/bayesNetSample
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = bayes
packages = find:
python_requires = >=3.6

[options.packages.find]
where = bayes
